--- a/composer.json
+++ b/composer.json
@@ -32,16 +32,16 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
-        "event-engine/php-code-generator-event-engine-ast": "dev-feature/update-to-latest-code-generation-features",
+        "event-engine/php-code-generator-event-engine-ast": "master",
         "event-engine/php-inspectio-cody": "dev-master",
         "event-engine/php-inspectio-graph-cody": "dev-master",
         "fig/http-message-util": "^1.1",
         "laminas/laminas-filter": "^2.9",
         "nikic/php-parser": "^v4.10.3",
-        "open-code-modeling/json-schema-to-php-ast": "^0.3.0",
-        "open-code-modeling/php-code-ast": "^0.10.0",
+        "open-code-modeling/json-schema-to-php-ast": "^0.5.3",
+        "open-code-modeling/php-code-ast": "^0.12.2",
         "open-code-modeling/php-code-generator-transformator": "^0.1.0",
-        "open-code-modeling/php-filter": "^0.1.1",
+        "open-code-modeling/php-filter": "^0.1.3",
         "psr/http-message": "^1.0"
     },
     "require-dev": {
