--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,15 @@
     "description": "PHP Code Generator for Event Engine powered by Cody",
     "license": "MIT",
     "type": "project",
+    "keywords": [
+        "php",
+        "code-generator",
+        "code-generation",
+        "ast-php",
+        "ast",
+        "abstract-syntax-tree",
+        "event-engine"
+    ],
     "authors": [
         {
             "name": "Alexander Miertsch",
