--- a/composer.json
+++ b/composer.json
@@ -41,9 +41,9 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
-        "event-engine/php-code-generator-event-engine-ast": "master",
+        "event-engine/php-code-generator-event-engine-ast": "dev-feature/add-missing-types",
+        "event-engine/php-inspectio-graph-cody": "dev-feature/add-missing-types as dev-master",
         "event-engine/php-inspectio-cody": "dev-master",
-        "event-engine/php-inspectio-graph-cody": "dev-master",
         "fig/http-message-util": "^1.1",
         "laminas/laminas-filter": "^2.9",
         "nikic/php-parser": "^v4.10.3",
