--- a/composer.json
+++ b/composer.json
@@ -42,8 +42,7 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "event-engine/php-code-generator-event-engine-ast": "dev-feature/simplify-connections",
-        "event-engine/php-inspectio-graph-cody": "dev-feature/simplify-connections as dev-master",
-        "event-engine/php-inspectio-cody": "dev-master",
+        "event-engine/php-inspectio-cody": "dev-feature/simplify-connections",
         "fig/http-message-util": "^1.1",
         "laminas/laminas-filter": "^2.9",
         "nikic/php-parser": "^v4.10.3",
